# yoink

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_checkpoint_local.py
.github/workflows/: ci.yml
examples/: ai_training_data.py  basic_crawl.py  checkpoint_resume.py  custom_extraction.py
src/yoink/: __init__.py  __main__.py  checkpoint.py  cli.py  crawler.py  extractor.py  fetcher.py  filters.py  models.py  parser.py  scheduler.py  stats.py  storage.py  writers.py
tests/: conftest.py  test_checkpoint.py  test_filters.py  test_models.py  test_parser.py  test_scheduler.py  test_stats.py  test_storage.py
