[tool.poetry]
name = "yoink"
version = "0.3.0"
description = "YOINK - The public data crawler. Because it's public."
authors = ["csgod"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ErikkJs/yoink"
repository = "https://github.com/ErikkJs/yoink"
keywords = ["web-crawler", "scraper", "ai", "data-extraction", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "yoink", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9"
beautifulsoup4 = "^4.12"
lxml = "^5.1"
trafilatura = "^1.12"
click = "^8.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
structlog = "^24.1"
tqdm = "^4.66"
aiofiles = "^23.2"
pyarrow = {version = "^15.0", optional = true}
aioboto3 = {version = "^13.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.3"
mypy = "^1.9"

[tool.poetry.extras]
parquet = ["pyarrow"]
s3 = ["aioboto3"]

[tool.poetry.scripts]
yoink = "yoink.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
